Some JDK 17 fixes and one for skipping a failing test